# BioReactorDesign

./: .buildinfo  LICENSE  README.md  acknowledgments.html  airlift.html  bird.calibration.html  bird.html  bird.meshing.html  bird.postprocess.html  bird.preprocess.data_case_gen.html  bird.preprocess.dynamic_mixer.html  bird.preprocess.html  bird.preprocess.json_gen.html  bird.preprocess.species_gen.html  bird.preprocess.stl_patch.html  bird.utilities.html  bubbleColumn.html  calibration_bsd.html  calibration_normal_beta.html  contribute.html  genindex.html  index.html  loopReactor.html  meshing.html  modules.html  noxfile.py  objects.inv  preprocess.html  py-modindex.html  pyproject.toml  python_interface.html  python_interface_tut.html  quickstart.html  references.html  search.html  searchindex.js  side_sparger.html  sphinx-reading-durations.json  stirred_tank.html  troubleshoot.html  (+2 more)
.github/workflows/: build_docs.yml  ci.yml  codecov.yml  deploy_docs.yml
OFsolvers/applications/add_pH/: bioReact.H  createFields.H  microbeModel.C  microbeModel.H  phModel.C  phReact.H  putidaFoam.C  wellMixed.H
OFsolvers/applications/avgPutidaFoam/: bioReact.H  (+5 more)
_sources/: contribute.rst.txt  quickstart.rst.txt
bird/: version.py
bird/meshing/: _stirred_tank_reactor.py  stirred_tank_mesh.py
docs/source/: acknowledgments.rst  conf.py
scripts/: get_kla.py
scripts/bdo_reactions/: bdo_bioreaction_model.py  exptdata_bdo.csv  ma_bioreaction_model.py
scripts/ma_reactions/: exptdata_ma.csv  ma_bioreaction_model.py
scripts/pHRateDB/: Protons and pH.pptx  pHRateDB.bib  pHRateDB.rtf  phRateDB.xlsx
scripts/pH_case/: blockMeshDict_reactor  reconjob
scripts/pH_wellMixed/: blockMeshDict_reactor  ofoamjob  presteps.sh
scripts/pilotplant_species_copy/: script.sh
scripts/sart_500mL/: blockMeshDict_reactor  ofoamjob  ofoamjob_pp  presteps.sh
scripts/sartorious/: blockMeshDict_reactor  ofoamjob  prestep1_bm.sh  prestep2_of.sh  prestep3_final.sh  presteps.sh  sparger.stl  stl_plot.py  write_ring_sparger_stl.py
(+740 files in other folders)
